<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">قاصدک </string>
    <string name="hint">نام خانوادگی</string>
    <string name="add_school">افزودن مدرسه جدید </string>
    <string name="add_source_address"> تأیید آدرس مبدا </string>
    <string name="add_destination_address"> تأیید آدرس مقصد </string>
    <string name="searching"> درحال جستجو </string>
    <string name="search">  جستجو </string>
    <string name="error_messages_internet">خطای دریافت اطلاعات. لحظاتی بعد , دوباره سعی کنید</string>
    <string name="error_messages_code">کد وارد شده صحیح نمی باشد</string>
    <string name="exit_text">برای خروج دوباره روی بک بزنید</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="default_notification_channel_id">Customers</string>
    <string name="permission_title_rationale">Permission needed</string>
    <string name="permission_read_storage_rationale">قاصدک برای انتخاب تصویر نیازمند دسترسی به گالری میباشد.</string>
    <string name="permission_read_camera_rationale">قاصدک اپ برای گرفتن تصویر نیازمند دسترسی به دوربین میباشد.</string>
    <string name="permission_write_storage_rationale">Storage write permission is needed to save the image.</string>
    <string name="file_provider_authorities">com.yalantis.ucrop.provider</string>
    <string name="label_select_picture">انتخاب تصویر</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_ok">OK</string>
    <string name="notification_image_saved">Image saved</string>
    <string name="notification_image_saved_click_to_preview">Image saved. Click to preview.</string>
    <string name="format_crop_result_d_d">Crop Result (%1$dx%2$d)</string>
    <string name="select_school"> انتخاب مدرسه </string>
    <string name="choice_school">انتخاب مدرسه، آموزشگاه</string>
    <string name="choice_source_location">تایید آدرس منزل</string>
    <string name="choice_destination_location">مقصد سرویس (محل پیاده شدن مسیر برگشت)</string>
    <string name="payment_text">پرداخت</string>
    <string name="add_service"> سرویس جدید</string>
    <string name="add_service_student">افزودن سرویس جدید</string>
    <string name="add_service_student_please">برای ادامه کار نیاز به افزودن یک سرویس جدید میباشد</string>
    <string name="wait_for_check">درانتظار </string>
    <string name="driver_accept">تایید شده </string>
    <string name="payment">پرداخت شده</string>
    <string name="inService">درحال سفر</string>
    <string name="please_insert_all_of_information">لطفا تمام اطلاعات خواسته شده را تکمیل کنید</string>
    <string name="no_change">هیچ تغییری اعمال نشده است</string>
    <string name="please_select_your_state">لطفا استان خود را انتخاب کنید</string>
    <string name="please_select_a_student">یک دانش آموز انتخاب نمایید</string>
    <string name="enter_driver_phone_number">شماره موبایل راننده را وارد کنید</string>
    <string name="driver_phone_number_is_not_correct">شماره موبایل راننده صحیح نیست</string>
    <string name="please_select_one_school">یک مدرسه انتخاب نمایید</string>
    <string name="source_address_is_not_selected">آدرس سوار شدن دانش آموز مشخص نمی باشد</string>
    <string name="destination_address_is_not_selected">آدرس پیاده شدن دانش آموز مشخص نمی باشد</string>
    <string name="please_stay_until_end">لطفا تا پایان جستجو صبر بفرمایید</string>
    <string name="name_and_family">سرویسی وجود ندارد</string>
    <string name="go_to_source">در حال حرکت به سمت مبدا</string>
    <string name="go_to_des">در حال حرکت به سمت مقصد</string>
    <string name="riding">دانش اموز سوار شده</string>
    <string name="pull_off">دانش اموز پیاده شده</string>
    <string name="download">دانلود</string>
    <string name="call_to_driver">تماس با راننده</string>
    <string name="exit">خروج از حساب کاربری</string>
    <string name="student_new_list">لیست دانش اموزان</string>
    <string name="new_student">دانش آموز جدید</string>
    <string name="new_version">نسخه جدید منتشر شده است</string>
    <string name="download_new">دانلود</string>
    <string name="not_yet">فعلا نه</string>
    <string name="do_not_show_this_message">این پیام را دوباره نشان نده</string>
    <string name="service_status">وضعیت سرویس:</string>
    <string name="save_and_check">ثبت و ذخیره</string>
    <string name="close">بستن</string>
    <string name="retry">تلاش مجدد</string>
    <string name="exit_program">خروج از برنامه</string>
    <string name="show_error">نمایش خطا</string>
    <string name="wrong_server_error">خطا در ارتباط با سرور: لطفا دوباره تلاش نمایید</string>
    <string name="please_insert_your_phone_for_login">لطفا برای عضویت شماره موبایل خود را وارد نمایید.</string>
    <string name="go_forward">ادامه</string>
    <string name="download_new_version_from_store">نسخه جدیدی از برنامه در دسترس است برای استفاده از تمامی ویژگجی های اپلیکیشن، نسخه جدید را از بازار یا گوگل پلی دانلود کنید.</string>
    <string name="service_list">لیست سرویس ها</string>
    <string name="connection_failed">خطای ارتباط با سرور</string>
    <string name="close_from_app">خروج از برنامه</string>
    <string name="try_again">تلاش دوباره</string>
    <string name="another_students">سایر دانش اموزان</string>
    <string name="gender">جنسیت</string>
    <string name="boy">پسر</string>
    <string name="girl">دختر</string>
    <string name="parents_details">مشخصات سایر اولیا</string>
    <string name="your_phone">شماره تلفن همراه ولی اصلی (شما)</string>
    <string name="state">استان</string>
    <string name="parent_profile">پروفایل ولی</string>
    <string name="debug_code">رفع تمامی مشکلات گزارش شده</string>
    <string name="data_saved_in_draft">تغییرات در پیش نویس ذخیره گردید</string>
    <string name="please_insert_your_student_name">لطفا نام دانش آموز را وارد کنید</string>
    <string name="please_insert_your_student_family">لطفا نام خانوادگی دانش آموز را وارد کنید</string>
    <string name="please_insert_birth_day">لطفا تاریخ تولد دانش آموز را وارد کنید</string>
    <string name="please_insert_gender">لطفا جنسیت را انتخاب کنید</string>
    <string name="duplicate_mobile">شماره همراه دوم با شماره شما یکی است</string>
    <string name="please_insert_second_parent_information">لطفا نسبت ولی دانش آموز را وارد کنید</string>
    <string name="please_insert_second_parent_phone">لطفا شماره همراه ولی 2 دانش آموز را  صحیح وارد کنید</string>
    <string name="save_successful"> با موفقیت ثبت شد</string>
    <string name="request_again">تایید کد ورود</string>
    <string name="send_six_digit_code">یک کد 6 رقمی به شماره تلفن همراه %s ارسال شد آن را وارد نمایید</string>
    <string name="time_of_request">زمان ارسال مجدد %d ثانیه</string>
    <string name="error_in_data_input">خطا در ورود اطلاعات، دوباره بررسی نمایید</string>
    <string name="no_service_exist">سرویسی در حال حاضر وجود ندارد</string>
    <string name="no_run_service_exist">سرویس در جریان نیست</string>
    <string name="manage_service">مدیریت سرویس</string>
    <string name="until_pay">برای استفاده از قابلیت مشاهده موقعیت راننده لطفا مبلغ اشتراک را پرداخت کنید!</string>
    <string name="best_address">آدرس دقیق مدرسه</string>
    <string name="school_name_for_add">نام مدرسه</string>
    <string name="new_school_inter">مدرسه جدید</string>
    <string name="no_proper_data_for_show">داده مناسبی برای نشان دادن از سرور برگشت داده نشده است</string>
    <string name="no_proper_data_for_add_school">داده مناسبی برای اضافه کردن مدرسه جدید از سرور برگشت داده نشده است</string>
    <string name="no_student_exist">شماهیج دانش آموزی ندارید لطفا آن را اضافه نماید</string>
    <string name="you_have_no_student">شما هیچ دانش آموزی ندارید</string>
    <string name="you_have_no_service">شما هیچ سرویسی ندارید</string>
    <string name="no_driver_accept_your_students"> سرویس ها در انتظار تایید راننده می باشد</string>
    <string name="you_have_no_ack_service">سرویس دانش آموز تایید نشده</string>
    <string name="wait_for_pay">نسخه جدید</string>
    <string name="pay_text">هزینه استفاده از این سرویس سالیانه مبلغ 30000 تومان می باشد که می توانید با فشردن کلید زیر آن را به صورت آنلاین پرداخت نمایید</string>
    <string name="download_new_version">خرید اشتراک</string>
    <string name="do_you_want_exit">آیا میخواهید از برنامه خارج شوید؟</string>
    <string name="running_services">سرویس های در حال انجام</string>
    <string name="ghasedak">قاصدک</string>
    <string name="please_insert_student_at_first">لطفا در ابتدا یک دانش آموز اضافه نمایید.</string>
    <string name="please_explain_service">لطفا یک سرویس تعریف نمایید.</string>
    <string name="talk_to_driver">برای توصیه قاصدک به راننده سرویس، مرحله سه را انجام نمایید</string>
    <string name="help_parent_app">راهنمای استفاده از قاصدک (والدین)</string>
    <string name="send_to">پیامک به ولی</string>
    <string name="app_version">نسخه %s</string>
    <string name="default_version">نسخه 1.2.4</string>
    <string name="find_your_location">درحال دریافت مکان شما</string>
    <string name="permission_do_not_access_to_gps">امکان مکان یابی وجود ندارد.لطفا دسترسی ها را چک کنید</string>
    <string name="enable_gps">فعال سازی مکان یاب</string>
    <string name="do_you_want_turn_gps_on">آیا می خواهید مکان یاب روشن کنید؟</string>
    <string name="please_input_school_name">لطفا نام مدرسه را وارد کنید</string>
    <string name="please_input_student_name">لطفا نام را وارد کنید</string>
    <string name="please_input_student_family">لطفا نام خانوادگی را وارد کنید</string>
    <string name="please_input_driver_phone">لطفا شماره راننده را وارد کنید</string>
    <string name="please_valid_driver_phone"> شماره راننده معتبر نیست</string>
    <string name="please_input_school_name_correctly">لطفا آدرس مدرسه را صحیح وارد کنید</string>
    <string name="please_define_address">لطفا ادرس را مشخص نمایید</string>
    <string name="unknown">نامشخص</string>
    <string name="please_click_on_school">لطفا مدرسه را کلیک کنید</string>
    <string name="this_school_not_available">مدرسه مورد نظر غیر فعال می باشد</string>
    <string name="select_school_">انتخاب مدرسه</string>
    <string name="permission_not_allow_to_show_map">امکان نمایش نقشه وجود ندارد.لطفا دسترسی ها را چک کنید</string>
    <string name="edit_student_service">ویرایش سرویس دانش اموز</string>
    <string name="define_student_service">تعریف سرویس دانش اموز</string>
    <string name="not_pay">پرداخت نشده</string>
    <string name="destination_address">مقصد سرویس</string>
    <string name="school">مدرسه</string>
    <string name="destination">مقصد :</string>
    <string name="your_phone_number">شماره تلفن همراه ولی اصلی (شما)</string>
    <string name="primitive_phone_number">شماره تلفن همراه ولی اصلی</string>
    <string name="ack">تایید</string>
    <string name="parent_send_sms_to_driver">سلام  من ولی دانش آموز %s هستم.  لطفا قاصدک نسخه راننده را از لینک زیر دریافت نمایید.  https://bit.ly/2N1EsQ7</string>
    <string name="phone_is_not_correct">شماره موبایل صحیح نیست</string>
    <string name="your_student_service_arrived">سرویس فرزند شما رسید.</string>
    <string name="save">ذخیره</string>
    <string name="do_you_want_save_setting">آیا میخواهید تغییرات اعمال شود</string>
    <string name="successful_done">ثبت با موفقیت انجام شد</string>
    <string name="city">شهر</string>
    <string name="select_city">انتخاب شهر</string>
    <string name="family">نام خانوادگی</string>
    <string name="name">نام</string>
    <string name="phone_number">موبایل</string>
    <string name="school_service">سرویس مدرسه</string>
    <string name="test_version">نسخه %s</string>
    <string name="six_digit">کد 6 رقمی</string>
    <string name="exit_app">خروج از برنامه</string>
    <string name="do_you_want_to_exit">آیا میخواهید از برنامه خارج شوید ؟</string>
    <string name="yes">بلی</string>
    <string name="no">خیر</string>
    <string name="driver_phone_number">شماره تماس راننده</string>
    <string name="student_details">مشخصات دانش آموز</string>
    <string name="phone_driver_info">اطلاعات تماس راننده</string>
</resources>