<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/title_text"
        style="@style/persianTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        android:text="@string/exit_app"
        android:textColor="@color/light_gray"
        android:textSize="14sp"
        />

    <View
        android:id="@+id/separator"
        style="@style/persianTextView"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/title_text"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/transparent"/>

    <TextView
        android:id="@+id/body_text"
        style="@style/persianTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/do_you_want_to_exit"
        android:textColor="#000000"
        android:textSize="13sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/yes_button"
            style="@style/persianTextView"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="16dp"
            android:text="@string/yes"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/no_button"
            style="@style/persianTextView"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="16dp"
            android:text="@string/no"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            />
    </LinearLayout>


</RelativeLayout>