<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#FFF"
                android:gravity="center"
                tools:ignore="VectorDrawableCompat">

    <ImageView
        android:id="@+id/image_download_dialog"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_alignParentTop="true"
        android:tint="#000"
        app:srcCompat="@drawable/update_version_icon"/>

    <TextView
        android:id="@+id/new_version_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_download_dialog"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:gravity="center"
        android:padding="16dp"
        android:singleLine="true"
        android:textColor="#000000"
        android:textSize="12dp"
        android:text="@string/new_version"/>


    <TextView
        android:id="@+id/new_version_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_version_text"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:padding="16dp"
        android:textColor="#000000"
        android:textSize="12dp"
        android:text="@string/download_new_version_from_store"/>


    <View
        android:id="@+id/separator_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/new_version_description"
        android:layout_margin="5dp"
        android:alpha=".2"
        android:background="#000"/>


    <TextView
        android:id="@+id/btn_yes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator_view"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:text="@string/download_new"
        android:textColor="#000"
        android:textSize="13dp"
        android:textStyle="bold"/>


    <TextView
        android:id="@+id/btn_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_yes"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:text="@string/not_yet"
        android:textColor="#000"
        android:textSize="13dp"/>

    <CheckBox
        android:id="@+id/pup_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_no"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:button="@drawable/abc_btn_check_material"
        android:layoutDirection="rtl"
        android:layout_marginBottom="16dp"
        android:text="@string/do_not_show_this_message"
        android:textAlignment="textStart"
        android:textColor="#000"
        android:typeface="serif"
        tools:ignore="RtlCompat"/>

</RelativeLayout>