<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/main_layout"
        android:orientation="vertical">

        <!--<com.airbnb.lottie.LottieAnimationView-->
            <!--android:id="@+id/image_dialog"-->
            <!--android:layout_width="70dp"-->
            <!--android:layout_height="70dp"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:layout_marginTop="16dp"-->
            <!--android:layout_marginBottom="16dp"-->
            <!--app:lottie_loop="true"-->
            <!--/>-->

        <TextView
            android:id="@+id/text_title"
            style="@style/persianTitleText"
            android:layout_marginTop="12dp"
            android:text="@string/student_details" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
        style="@style/textInputLayout"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1">

        <EditText
            android:id="@+id/input_name"
            style="@style/EditText"
            android:inputType="text"
            android:textSize="12sp"
            android:hint="@string/name" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            style="@style/textInputLayout"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/input_family"
                style="@style/EditText"
                android:inputType="text"
                android:textSize="12sp"
                android:hint="@string/family" />
        </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/text2_title"
            style="@style/persianTitleText"
            android:text="@string/phone_driver_info"
            android:layout_marginTop="12dp"/>
        <TextView
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/driver_name"
            android:textSize="12sp"
            tools:text="@string/phone_driver_info"
            />
        <android.support.design.widget.TextInputLayout
            style="@style/textInputLayout"
            android:layout_marginTop="0dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/input_mobile"
                style="@style/EditText"
                android:inputType="phone"
                android:hint="@string/driver_phone_number"
                android:maxLength="11"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/action_button"
            style="@style/ButtonDark"
            tools:text="سلام"
            />

    </LinearLayout>
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignBottom="@id/main_layout"
        android:layout_marginBottom="24dp"
        android:visibility="gone"/>


</RelativeLayout>